k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: two-tier-app
  namespace: production
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: two-tier-app


  template:
    metadata:
      labels:
        app: two-tier-app

    spec:
      containers:
        - name: two-tier-app
          image: manoj1812/two-tier-springboot:1.1

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
